fix the categorie section on mobile

--- a/styles/menu.css
+++ b/styles/menu.css
@@ -66,11 +66,12 @@ body {
 
 .categorie {
   padding: 0 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .categorie-wrp {
-  justify-content: center;
-  align-items: center;
   display: flex;
   gap: 1rem;
   overflow-x: auto;
